--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.9.4",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tone": "^15.1.22"
   }
 }
